# warrant-core

./: .gitignore  AGENTS.md  Cargo.toml  README.md
examples/: minimal_check.rs
src/: canonical.rs  crypto.rs  elevation.rs  engine.rs  error.rs  lib.rs  lock.rs  model.rs  parser.rs  paths.rs  payload.rs  store.rs
